--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "SlOom",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "xatlib": "^1.0.0"
   }
 }
