--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "author": "SlOom",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.79.0",
-    "xatlib": "^1.0.0"
+    "request": "^2.79.0"
   }
 }
