--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "xatapi",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Xat tools.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "xat",
+    "tools",
+    "nodejs"
+  ],
   "author": "SlOom",
   "license": "MIT",
   "dependencies": {
