--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "main": "./source/xat",
   "dependencies": {
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "xatapi": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
