--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "xatapi": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "proxyquire": "^1.7.11"
   }
 }
